--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
 Pygments==2.19.1
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
